[package]
name = "separate-memory-transfer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.58"
wasm-bindgen = { version = "0.2.81", features = ["serde-serialize"] }

[dependencies.web-sys]
version = "0.3.58"
features = [
  "DedicatedWorkerGlobalScope",
  "MessageEvent",
  "Performance",
  "Worker",
]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
