[package]
name = "shared-memory"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.58"
wasm-bindgen = "0.2.81"

[dependencies.web-sys]
version = "0.3.58"
features = [
  "Performance",
  "Worker",
]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
